syntax = "proto3";

package synclet;

option go_package = "github.com/windmilleng/tilt/internal/synclet/proto;proto";

service Synclet {
    rpc GetContainerIdForPod (GetContainerIdForPodRequest) returns (stream GetContainerIdForPodReply) {}

    // updates the specified container and then restarts it
    // (much functionality packed into one rpc to minimize latency)
    rpc UpdateContainer (UpdateContainerRequest) returns (stream UpdateContainerReply) {}
}

message GetContainerIdForPodRequest {
    string pod_id = 1;
    string image_id = 2;
    Context context = 3;
}

message GetContainerIdForPodReply {
    oneof content {
        string container_id = 1;
        LogMessage message = 2;
    }
}

message Cmd {
    repeated string argv = 1;
}

message UpdateContainerRequest {
    string container_id = 1;
    bytes tar_archive = 2;
    repeated string files_to_delete = 3;
    repeated Cmd commands = 4;
    Context context = 5;
}

enum LogLevel {
    INFO = 0;
    VERBOSE = 1;
    DEBUG = 2;
}

message LogMessage {
    LogLevel level = 1;
    bytes message = 2;
}

message UpdateContainerReply {
    LogMessage logMessage = 1;
}

message Context {
    bool logColorsEnabled = 1;
}
